--- a/index.html
+++ b/index.html
@@ -359,8 +359,12 @@
                                     <div class="row">
                                             <div class="col-sm-3"></div>
                                             <div class=" col-sm-6" id="cartTotal">
-                                               <h5>Total:</h5>
+                                               <h5>Subtotal:</h5>
                                                <p id="totalHere"></p>
+                                               <h5>Tax:</h5>
+                                               <p id="taxHere"></p>
+                                               <h5>Total:</h5>
+                                               <p id="bigTotalHere"></p>
                                             </div>
                                             <div class="col-sm-3"></div>
             
